styles/styles.css
/*
Name: Akshath Jain
Date: 8/27/17
Purpose: CSS document for HackNA website
*/

body{
	font-family: "Lato", sans-serif;
	font: 20px;
	line-height: 1.8;
}

h3{
	font-family: "Open Sans", sans-serif;
}

.container-fluid{
	padding: 0px;
	margin: 0px;
}

.row{
	margin-left: 0px;
	margin-right: 0px;
}

.btn{
	font-size: 15px;
	border: 0px;
	border-radius: 0px;
	padding: 10px 20px;
	margin: 5px;
}

.btn-warning{
	color: #ffffff !important;
	background-color: #FFA000 !important;
}

.btn-warning:hover{
	color: #ffffff !important;
	background-color: #db8900 !important;
}

.btn-danger{
	color: #ffffff;
	background-color: #F44336;
}

.btn-danger:hover{
	background-color: #C62828;
}

.btn-success{
	color: #ffffff;
	background-color: #4CAF50;
}

.btn-success:hover{
	background-color: #2E7D32;
}

.btn-custom{
	display: inline-block;
	background-color: rgba(0,0,0,0);
	color: #d1d1d1;
	cursor: pointer;
	padding: 3px 8px 3px 8px;
	margin: 8px 0px 8px 0px;
	border-radius: 10px;
	border-style: solid;
	border-color: #FFA000;
	transition: 0.1s;
	-webkit-transition: 0.1s;
}

.btn-custom:hover{
	background-color: #FFA000;
	color: #ffffff;
	text-decoration: none;
	transition: 0.1s;
	-webkit-transition: 0.1s;
}

.link-light{
	color: #90CAF9;
}

.link-light:hover{
	color: #90CAF9;
	cursor: pointer;
}

/*navbar styles*/
.navbar{
	padding-top: 15px;
	padding-bottom: 15px;
	border: 0;
	border-radius: 0;
	margin-bottom: 0;
	font-size: 16px !important;
	transition: 0.6s;
	-webkit-transition: 0.6s; /*for safari*/
	background-color: rgba(35,35,35,0);
}

.nav li a, .navbar-header a{
	color: #ffffff  !important;

}

.nav li a:hover{
	color: #FFA000 !important;
}

.navbarStateWhenScrolled{
	background-color: #0f0f0f;
	padding-top: 11px;
	padding-bottom: 11px;
	box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
}

.navbar-menu{
	border: 0px;
}

.navbar-menu:hover{
	background-color: rgba(0,0,0,0) !important;
}

.icon-bar{
	background-color: #ffffff !important;
}

.logo{
	height: 55px;
	transition: 0.5s;
	-webkit-transition: 0.5s;
}

.logo-small{
	height: 45px;
	transition: 0.5s;
	-webkit-transition: 0.5s;
}

@media only screen and (max-width: 1000px){
	.content-container{
		width: 95%;
	}
}

h1{
	font-size: 27px;
	margin-bottom: 50px;
	color: #ffffff;
}

h3{
	font-size: 18px;
	color: #ededed;
}

p{
	font-size: 16px;
	color: #d1d1d1;
}

/*home styles*/
.bg-home{
	background: url("../images/blurred-background-vector.jpg");
	background-size: cover;
	display: block;
	padding-top: 70px;
	padding-bottom: 70px;
	padding-right: 10px;
	padding-left: 10px;
	height: 100vh;
	background-attachment: fixed;
}

.bgHomeStateWhenScrolled{
	background-color: rgba(0,0,0,0);
}

.bg-home-text{
	color: #ffffff;
	position: relative;
	top: 40%;
	transform: translateY(-40%);
}

.bg-home-text h1{
	font-size: 35px;
	margin-bottom: 10px;
}

.bg-home-text p{
	font-size: 20px;
	color: #ffffff;
}

.background-primary{
	background-color: #282828;
	padding-top: 70px;
	padding-bottom: 70px;
}

.background-secondary{
	background-color: #363636;
	padding-top: 70px;
	padding-bottom: 70px;
}

.content-container{
	width: 80%;
	margin: 0 auto;
}

.content-container-smaller{
	width: 60%;
	margin: 0 auto;
}

@media only screen and (max-width: 720px){
	.content-container-smaller{
		width: 90%;
	}
}

.bg-map{
	background-color: rgba(255,255,255,0);
	margin-bottom: -10px;
}

.bg-faq{
	transition: 0.2s;
	-webkit-transition: 0.2s;
}

@media only screen and (max-width: 720px){
	.bg-faq{
		width: 95%;
	}
}

.nav-tabs > li, .nav-pills > li {
	float:none;
	display:inline-block;
	*display:inline; /* ie7 fix */
	zoom:1; /* hasLayout ie7 trigger */
}

.nav-tabs, .nav-pills {
	text-align:center;
}

.nav-pills > .active > a, .nav-pills > .active > a:hover{
	background-color: #424242 !important;
}

.nav-pills > li > a:focus, .nav-pills > li > a:hover {
	background-color: #424242;
}

.table-row{
	display: table;
	table-layout: fixed;
	width: 100%;
	border-spacing: 25px;
	border-collapse: separate;
}

.table-cell{
	display: table-cell;
	padding: 10px;
	margin: 10px;
}

.table-hover-dark tbody tr:hover td, .table-hover tbody tr:hover th {
	background-color: #424242;
}

.card{
	background: #353535;
	border-radius: 0px;
	height: 100%;
	padding: 10px;
	padding-left: 25px;
	padding-right: 25px;
	margin-bottom: 30px;

	border-style: solid;
	border-left-color: #FFA000;
	border-top: none;
	border-right: none;
	border-bottom: none;
}

@media only screen and (max-width: 1100px){
	.table-cell{
		display: block;
		margin-left: 0px;
		width: 100%;
	}
}

/*sponsor styles*/
.bg-sponsor{
	background-image: url("../images/circuitboard-background.svg");
	background-size: cover;
}

.sponsor-image{
	padding: 20px;
}

.staff-image{
	margin-top: 70px;
	margin-bottom: 10px;
	width: 275px;
}

.clickable{
	transition: 0.2s;
	-webkit-transition: 0.2s;
}

.clickable:hover{
	opacity: 0.8;
	transition: 0.2s;
	-webkit-transition: 0.2s;
	cursor: pointer;
}

.img-scalable{
	text-align: center;
	max-width: 100%;
	display: block;
	height: auto;
	margin: 0 auto;
}

.social-media-icons{
	width: 27px;
}

.bg-footer{
	padding-left: 50px;
}

